--- a/src/verse-ref-view/manifest.json
+++ b/src/verse-ref-view/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "paranext-extension-template",
+  "name": "verse-ref-view",
   "version": "0.0.1",
-  "description": "Extension template for Paranext. Powered by webpack",
+  "description": "Web View that shows the current Verse Reference - Platform.Bible extension",
   "author": "Paranext",
   "license": "MIT",
   "main": "src/main.ts",
-  "types": "src/types/paranext-extension-template.d.ts",
+  "types": "src/types/verse-ref-view.d.ts",
   "menus": "contributions/menus.json",
   "settings": "contributions/settings.json",
   "projectSettings": "contributions/projectSettings.json",
