Added verse ref view functionality

--- a/src/verse-ref-view/manifest.json
+++ b/src/verse-ref-view/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "verse-ref-view",
+  "name": "verseRefView",
   "version": "0.0.1",
   "description": "Web View that shows the current Verse Reference - Platform.Bible extension",
   "author": "Paranext",
