--- a/src/website-viewer/package.json
+++ b/src/website-viewer/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "paranext-extension-template",
+  "name": "website-viewer",
   "private": true,
   "version": "0.0.1",
   "main": "src/main.js",
-  "types": "src/types/paranext-extension-template.d.ts",
+  "types": "src/types/website-viewer.d.ts",
   "author": "Paranext",
   "license": "MIT",
   "scripts": {
