--- a/src/website-viewer/manifest.json
+++ b/src/website-viewer/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "webViewer",
+  "name": "websiteViewer",
   "version": "0.1.0",
   "displayData": "assets/displayData.json",
   "author": "Paranext",
@@ -7,7 +7,7 @@
   "main": "src/main.ts",
   "extensionDependencies": {},
   "elevatedPrivileges": [],
-  "types": "src/types/web-viewer.d.ts",
+  "types": "src/types/website-viewer.d.ts",
   "menus": "contributions/menus.json",
   "settings": "contributions/settings.json",
   "projectSettings": "contributions/projectSettings.json",
