--- a/package.json
+++ b/package.json
@@ -29,10 +29,7 @@
     "update-from-templates": "tsx ./lib/update-from-templates.ts"
   },
   "browserslist": [],
-  "peerDependencies": {
-    "react": ">=18.3.1",
-    "react-dom": ">=18.3.1"
-  },
+  "peerDependencies": { "react": ">=18.3.1", "react-dom": ">=18.3.1" },
   "dependencies": {
     "@sillsdev/scripture": "^2.0.2",
     "platform-bible-utils": "file:../paranext-core/lib/platform-bible-utils"
@@ -58,7 +55,6 @@
     "eslint-import-resolver-typescript": "^3.8.3",
     "eslint-plugin-compat": "^4.2.0",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jest": "^27.9.0",
     "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-no-null": "^1.0.2",
     "eslint-plugin-no-type-assertion": "^1.3.0",
@@ -74,7 +70,7 @@
     "prettier": "^3.5.2",
     "prettier-plugin-jsdoc": "^1.3.2",
     "replace-in-file": "^7.2.0",
-    "sass": "^1.85.0",
+    "sass": "^1.85.1",
     "sass-loader": "^16.0.5",
     "stylelint": "^16.11.0",
     "stylelint-config-recommended": "^14.0.1",
@@ -86,17 +82,13 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tsconfig-paths-webpack-plugin": "^4.2.0",
-    "tsx": "^4.19.2",
+    "tsx": "^4.19.3",
     "typescript": "^5.4.5",
     "webpack": "^5.97.1",
     "webpack-cli": "^5.1.4",
     "webpack-merge": "^6.0.1",
     "zip-folder-promise": "^1.2.0"
   },
-  "workspaces": [
-    "src/*"
-  ],
-  "volta": {
-    "node": "20.18.0"
-  }
+  "workspaces": ["src/*"],
+  "volta": { "node": "20.18.0" }
 }
