--- a/src/verse-ref-view/package.json
+++ b/src/verse-ref-view/package.json
@@ -28,10 +28,7 @@
     "lint-fix:scripts": "npm run format && npm run lint:scripts"
   },
   "browserslist": [],
-  "peerDependencies": {
-    "react": ">=18.3.1",
-    "react-dom": ">=18.3.1"
-  },
+  "peerDependencies": { "react": ">=18.3.1", "react-dom": ">=18.3.1" },
   "dependencies": {
     "@sillsdev/scripture": "^2.0.2",
     "platform-bible-utils": "file:../../../paranext-core/lib/platform-bible-utils"
@@ -57,7 +54,6 @@
     "eslint-import-resolver-typescript": "^3.8.3",
     "eslint-plugin-compat": "^4.2.0",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jest": "^27.9.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-no-null": "^1.0.2",
     "eslint-plugin-no-type-assertion": "^1.3.0",
@@ -72,7 +68,7 @@
     "postcss-loader": "^8.1.1",
     "prettier": "^3.5.2",
     "prettier-plugin-jsdoc": "^1.3.2",
-    "sass": "^1.85.0",
+    "sass": "^1.85.1",
     "sass-loader": "^16.0.5",
     "stylelint": "^16.11.0",
     "stylelint-config-recommended": "^14.0.1",
@@ -90,7 +86,5 @@
     "webpack-merge": "^6.0.1",
     "zip-build": "^1.8.0"
   },
-  "volta": {
-    "node": "20.18.0"
-  }
+  "volta": { "extends": "../../package.json" }
 }
