--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "update-from-templates": "tsx ./lib/update-from-templates.ts"
   },
   "browserslist": [],
-  "peerDependencies": { "react": ">=18.3.1", "react-dom": ">=18.3.1" },
+  "peerDependencies": {
+    "react": ">=18.3.1",
+    "react-dom": ">=18.3.1"
+  },
   "dependencies": {
     "@sillsdev/scripture": "^2.0.2",
     "platform-bible-utils": "file:../paranext-core/lib/platform-bible-utils"
@@ -90,5 +93,7 @@
     "zip-folder-promise": "^1.2.0"
   },
   "workspaces": ["src/*"],
-  "volta": { "node": "20.18.0" }
+  "volta": {
+    "node": "20.18.0"
+  }
 }
