--- a/src/verse-ref-view/package.json
+++ b/src/verse-ref-view/package.json
@@ -28,7 +28,10 @@
     "lint-fix:scripts": "npm run format && npm run lint:scripts"
   },
   "browserslist": [],
-  "peerDependencies": { "react": ">=18.3.1", "react-dom": ">=18.3.1" },
+  "peerDependencies": {
+    "react": ">=18.3.1",
+    "react-dom": ">=18.3.1"
+  },
   "dependencies": {
     "@sillsdev/scripture": "^2.0.2",
     "platform-bible-utils": "file:../../../paranext-core/lib/platform-bible-utils"
@@ -86,5 +89,7 @@
     "webpack-merge": "^6.0.1",
     "zip-build": "^1.8.0"
   },
-  "volta": { "extends": "../../package.json" }
+  "volta": {
+    "extends": "../../package.json"
+  }
 }
