--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "platform-bible-sample-extensions",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.2.0",
   "author": "Paranext",
   "license": "MIT",
   "scripts": {
@@ -30,7 +30,10 @@
     "bump-versions": "tsx ./lib/bump-versions.ts"
   },
   "browserslist": [],
-  "peerDependencies": { "react": ">=18.3.1", "react-dom": ">=18.3.1" },
+  "peerDependencies": {
+    "react": ">=18.3.1",
+    "react-dom": ">=18.3.1"
+  },
   "dependencies": {
     "@sillsdev/scripture": "^2.0.2",
     "platform-bible-utils": "file:../paranext-core/lib/platform-bible-utils"
@@ -90,6 +93,10 @@
     "webpack-merge": "^6.0.1",
     "zip-folder-promise": "^1.2.0"
   },
-  "workspaces": ["src/*"],
-  "volta": { "node": "20.18.0" }
+  "workspaces": [
+    "src/*"
+  ],
+  "volta": {
+    "node": "20.18.0"
+  }
 }
