--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "lint:scripts": "eslint --ext .cjs,.js,.jsx,.ts,.tsx --cache .",
     "lint:styles": "stylelint **/*.{css,scss}",
     "lint-fix": "npm run lint-fix:scripts && npm run lint:styles -- --fix",
-    "lint-fix:scripts": "npm run format && npm run lint:scripts"
+    "lint-fix:scripts": "npm run format && npm run lint:scripts",
+    "bump-versions": "ts-node ./lib/bump-versions.ts"
   },
   "browserslist": [],
   "peerDependencies": {
@@ -57,7 +58,6 @@
     "eslint-import-resolver-typescript": "^3.8.3",
     "eslint-plugin-compat": "^4.2.0",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jest": "^27.9.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-no-null": "^1.0.2",
     "eslint-plugin-no-type-assertion": "^1.3.0",
