Customized template to be Theme Selector

--- a/src/theme-selector/manifest.json
+++ b/src/theme-selector/manifest.json
@@ -1,14 +1,14 @@
 {
-  "name": "paranextExtensionTemplate",
-  "version": "0.0.1",
-  "publisher": "paranext",
+  "name": "themeSelector",
+  "version": "0.3.0-alpha.0",
+  "publisher": "platform",
   "displayData": "assets/displayData.json",
   "author": "Paranext",
   "license": "MIT",
   "main": "src/main.ts",
   "extensionDependencies": {},
   "elevatedPrivileges": [],
-  "types": "src/types/paranext-extension-template.d.ts",
+  "types": "src/types/theme-selector.d.ts",
   "menus": "contributions/menus.json",
   "settings": "contributions/settings.json",
   "projectSettings": "contributions/projectSettings.json",
