--- a/src/theme-selector/package.json
+++ b/src/theme-selector/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "paranext-extension-template",
+  "name": "theme-selector",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.3.0-alpha.0",
   "main": "src/main.js",
-  "types": "src/types/paranext-extension-template.d.ts",
+  "types": "src/types/theme-selector.d.ts",
   "author": "Paranext",
   "license": "MIT",
   "scripts": {
