--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -47,6 +47,7 @@
         "MAIN_ARGS": "--inspect=5858 --remote-debugging-port=9223",
         "IN_VSCODE": "true"
       },
+      "outputCapture": "console",
       "presentation": {
         "hidden": false,
         "group": "",
