--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
   },
   "dependencies": {
     "@sillsdev/scripture": "^2.0.2",
-    "platform-bible-utils": "file:../paranext-core/lib/platform-bible-utils"
+    "platform-bible-utils": "file:../paranext-core/lib/platform-bible-utils",
+    "react-hook-form": "^7.58.1",
+    "styled-components": "^6.0.0",
+    "stylis": "^4.0.0"
   },
   "devDependencies": {
     "@swc/core": "^1.10.18",
@@ -44,6 +47,7 @@
     "@types/node": "^20.16.11",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/styled-components": "^5.1.34",
     "@types/webpack": "^5.28.5",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
@@ -88,8 +92,6 @@
     "tsconfig-paths-webpack-plugin": "^4.2.0",
     "tsx": "^4.19.3",
     "typescript": "^5.4.5",
-    "webpack": "^5.97.1",
-    "webpack-cli": "^5.1.4",
     "webpack-merge": "^6.0.1",
     "zip-folder-promise": "^1.2.0"
   },
