--- a/src/theme-selector/package.json
+++ b/src/theme-selector/package.json
@@ -35,7 +35,8 @@
   },
   "dependencies": {
     "@sillsdev/scripture": "^2.0.2",
-    "platform-bible-utils": "file:../../../paranext-core/lib/platform-bible-utils"
+    "platform-bible-utils": "file:../../../paranext-core/lib/platform-bible-utils",
+    "polished": "^4.3.1"
   },
   "devDependencies": {
     "@swc/core": "^1.10.18",
