--- a/.github/workflows/bump-versions.yml
+++ b/.github/workflows/bump-versions.yml
@@ -2,6 +2,9 @@ name: Bump Versions
 run-name: Bump versions on ${{ github.head_ref || github.ref_name }} to ${{ github.event.inputs.newVersion }}
 
 on:
+  push:
+    branches:
+      - 3107-improve-release-workflow
   workflow_dispatch:
     inputs:
       newVersion:
