--- a/.github/actions/bump-versions-action/action.yml
+++ b/.github/actions/bump-versions-action/action.yml
@@ -14,6 +14,7 @@ runs:
       # Bump versions using the built-in git token https://github.com/actions/checkout/tree/v4/?tab=readme-ov-file#push-a-commit-using-the-built-in-token
       shell: bash
       run: |
+        cd ${GITHUB_ACTION_PATH}/../../..
         git config user.name "github-actions[bot]"
         git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
         npm run bump-versions -- ${{ inputs.newVersion }}
