--- a/src/theme-selector/package.json
+++ b/src/theme-selector/package.json
@@ -34,9 +34,8 @@
     "react-dom": ">=18.3.1"
   },
   "dependencies": {
-    "@sillsdev/scripture": "^2.0.2",
-    "platform-bible-utils": "file:../../../paranext-core/lib/platform-bible-utils",
-    "polished": "^4.3.1"
+    "polished": "^4.3.1",
+    "tsx": "^4.19.3"
   },
   "devDependencies": {
     "@swc/core": "^1.10.18",
